xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__default_element_namespace_attribute_kind_test.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "parse_xpath_simple_element_ns(\"attribute(foo)\")"
---
Ok(XPath(Expr([
  Path(PathExpr(
    steps: [
      AxisStep(AxisStep(
        axis: Attribute,
        node_test: KindTest(Attribute(Some(ElementOrAttributeTest(
          name_or_wildcard: Name(Name(
            name: "foo",
            prefix: None,
            namespace: Some("http://example.com"),
          )),
          type_name: None,
        )))),
        predicates: [],
      )),
    ],
  )),
])))
