xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__double_slash_middle.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"child::foo//child::bar\")"
---
Ok(Path(PathExpr(
  steps: [
    AxisStep(AxisStep(
      axis: Child,
      node_test: NameTest(Name(Name(
        name: "foo",
        prefix: None,
        namespace: None,
      ))),
      predicates: [],
    )),
    AxisStep(AxisStep(
      axis: DescendantOrSelf,
      node_test: KindTest(Any),
      predicates: [],
    )),
    AxisStep(AxisStep(
      axis: Child,
      node_test: NameTest(Name(Name(
        name: "bar",
        prefix: None,
        namespace: None,
      ))),
      predicates: [],
    )),
  ],
)))
